--- a/01. (X) VSCode 설정.md
+++ b/01. (X) VSCode 설정.md
@@ -1,30 +1,47 @@
-# VSCode - 설정 (Setup)
+# VSCode - 설정 (SETUP)
 > [from the Visual Studio Code documentation](https://code.visualstudio.com/docs/setup/setup-overview)
 
 ## (X) 개요 (Overview)
 
-### (X) 사용 중인 플랫폼에 맞게 VS Code를 설정하세요.
-
-### (X) 업데이트 주기
-
-### (X) 내부자 야간 빌드
-
 ### (X) 휴대용 모드
+
 VSCode를 USB 드라이브에서 실행할 수 있습니다.
 
-### (X) 다음 단계
-
-<br>
 <br>
 
 ## (X) 리눅스
 
 <br>
-<br>
 
 ## (X) macOS
 
 <br>
-<br>
 
 ## (X) 윈도우
+
+<br>
+
+## (X) 웹용 VS Code
+
+<br>
+
+## (X) 라즈베리 파이
+
+<br>
+
+## (X) 회로망
+
+<br>
+
+## (X) 추가 구성 요소
+
+
+<br>
+
+## (X) 기업
+
+<br>
+
+## (X) 제거
+
+### 깔끔한 제거
